2002-07-16  Mo DeJong  <supermo@bayarea.net>

	* gui/rcs.tcl (check_in_out): Don't check
	return value of sn_rcs.* methods since they
	do not return booleans and we don't do anything
	with the results of such a check.
	* gui/version.tcl (sn_rcs_lockunlockdel): Use
	treebind method of the Selector& class, the
	bind method was removed long ago.
	[Bug 570492]

2002-07-14  Mo DeJong  <supermo@bayarea.net>

	* gui/editorpane.tcl (proceed_gotoline): Save
	and reset the -linenumber_var value before hiding
	the goto line dialog since this invokes Focus_In
	and changes the value. This was causing the Win32
	version to fail.
	[Bug 579168]

2002-07-09  David Philippi  <lists@torangan.de>

	* hyper/c_high.l: Added all missing keywords
	from ISO C++ (according to a list from
	"The Complete Reference C++" by Herbert Schildt).
	Removed the obsolete keyword "overload" and
	the non-existing keyword "interface".

2002-07-02  Mo DeJong  <supermo@bayarea.net>

	Added SN-510-2002-07-02 and SN-51-branch tags.

2002-06-25  Mo DeJong  <supermo@bayarea.net>

	* mkdist.sh: Update version to 5.1.0.

2002-06-25  Mo DeJong  <supermo@bayarea.net>

	* hyper/highlight.c (tk_text_buffer): Update hack used
	to extract text from a Tk text widget before passing
	it to the lexer. This function has the name of the
	tk dll hard coded inside it, and it needed to be
	updated. The method also lacked error checking for
	the case where the dll could not be found.

2002-06-24  Mo DeJong  <supermo@bayarea.net>

	* patches/tk_wmwithdraw.patch: Add patch that fixes
	win32 initial mapping problems. This fixes the forward
	button in the tools window, it was not painting when
	the window was first mapped. This also fixes problems
	with dialogs that get mapped at one size but then
	get moved or resized at idle time.

2002-06-24  Mo DeJong  <supermo@bayarea.net>

	* gui/multiview.tcl (search_grep): Invoke StartGrep not
	ExecGrep on the grep widget.

2002-06-24  Mo DeJong  <supermo@bayarea.net>
